// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postgres-main GET $metadata 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<edmx:Edmx Version="1.0" xmlns:edmx="http://schemas.microsoft.com/ado/2007/06/edmx" xmlns:m="http://schemas.microsoft.com/ado/2007/08/dataservices/metadata" xmlns:sap="http://www.sap.com/Protocols/SAPData">
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="Common" Namespace="com.sap.vocabularies.Common.v1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="Core" Namespace="Org.OData.Core.V1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="UI" Namespace="com.sap.vocabularies.UI.v1"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion="2.0">
    <Schema Namespace="test.MainService" xmlns="http://schemas.microsoft.com/ado/2008/09/edm">
      <EntityContainer Name="EntityContainer" m:IsDefaultEntityContainer="true">
        <EntitySet Name="Header" EntityType="test.MainService.Header"/>
      </EntityContainer>
      <EntityType Name="Header">
        <Key>
          <PropertyRef Name="ID"/>
        </Key>
        <Property Name="ID" Type="Edm.Guid" Nullable="false"/>
        <Property Name="createdAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="createdBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="modifiedAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="modifiedBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="name" Type="Edm.String"/>
        <Property Name="description" Type="Edm.String"/>
        <Property Name="country" Type="Edm.String"/>
        <Property Name="currency" Type="Edm.String"/>
        <Property Name="stock" Type="Edm.Int32"/>
        <Property Name="price" Type="Edm.Decimal" Precision="12" Scale="2"/>
        <Property Name="date" Type="Edm.DateTime" sap:display-format="Date"/>
        <Property Name="dateTime" Type="Edm.DateTimeOffset"/>
        <Property Name="time" Type="Edm.Time"/>
        <Property Name="timestamp" Type="Edm.DateTimeOffset" Precision="7"/>
      </EntityType>
      <Annotations Target="test.MainService.Header" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.SelectionFields">
          <Collection>
            <PropertyPath>name</PropertyPath>
            <PropertyPath>currency</PropertyPath>
            <PropertyPath>country</PropertyPath>
          </Collection>
        </Annotation>
        <Annotation Term="UI.LineItem">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
              <PropertyValue Property="Label" String="Name"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="price"/>
              <PropertyValue Property="Label" String="Price"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="currency"/>
              <PropertyValue Property="Label" String="Currency"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="stock"/>
              <PropertyValue Property="Label" String="Stock"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="country"/>
              <PropertyValue Property="Label" String="Country"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="date"/>
              <PropertyValue Property="Label" String="Date"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="dateTime"/>
              <PropertyValue Property="Label" String="Date Time"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="time"/>
              <PropertyValue Property="Label" String="Time"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="timestamp"/>
              <PropertyValue Property="Label" String="Timestamp"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.HeaderInfo">
          <Record Type="UI.HeaderInfoType">
            <PropertyValue Property="TypeName" String="Header"/>
            <PropertyValue Property="TypeNamePlural" String="Headers"/>
            <PropertyValue Property="Title">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="name"/>
              </Record>
            </PropertyValue>
            <PropertyValue Property="Description">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="description"/>
              </Record>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.Facets">
          <Collection>
            <Record Type="UI.ReferenceFacet">
              <PropertyValue Property="Label" String="General"/>
              <PropertyValue Property="Target" AnnotationPath="@UI.FieldGroup#General"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.FieldGroup" Qualifier="General">
          <Record Type="UI.FieldGroupType">
            <PropertyValue Property="Data">
              <Collection>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="name"/>
                  <PropertyValue Property="Label" String="Name"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="price"/>
                  <PropertyValue Property="Label" String="Price"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="currency"/>
                  <PropertyValue Property="Label" String="Currency"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="stock"/>
                  <PropertyValue Property="Label" String="Stock"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="country"/>
                  <PropertyValue Property="Label" String="Country"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="date"/>
                  <PropertyValue Property="Label" String="Date"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="dateTime"/>
                  <PropertyValue Property="Label" String="Date Time"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="time"/>
                  <PropertyValue Property="Label" String="Time"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="timestamp"/>
                  <PropertyValue Property="Label" String="Timestamp"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="test.MainService.Header/ID" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="Core.ComputedDefaultValue" Bool="true"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/createdAt" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Created On"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/createdBy" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="User's unique ID"/>
        <Annotation Term="Common.Label" String="Created By"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/modifiedAt" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Changed On"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/modifiedBy" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="User's unique ID"/>
        <Annotation Term="Common.Label" String="Changed By"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`postgres-main GET $metadata localized 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<edmx:Edmx Version="1.0" xmlns:edmx="http://schemas.microsoft.com/ado/2007/06/edmx" xmlns:m="http://schemas.microsoft.com/ado/2007/08/dataservices/metadata" xmlns:sap="http://www.sap.com/Protocols/SAPData">
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="Common" Namespace="com.sap.vocabularies.Common.v1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="Core" Namespace="Org.OData.Core.V1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="UI" Namespace="com.sap.vocabularies.UI.v1"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion="2.0">
    <Schema Namespace="test.MainService" xmlns="http://schemas.microsoft.com/ado/2008/09/edm">
      <EntityContainer Name="EntityContainer" m:IsDefaultEntityContainer="true">
        <EntitySet Name="Header" EntityType="test.MainService.Header"/>
      </EntityContainer>
      <EntityType Name="Header">
        <Key>
          <PropertyRef Name="ID"/>
        </Key>
        <Property Name="ID" Type="Edm.Guid" Nullable="false"/>
        <Property Name="createdAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="createdBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="modifiedAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="modifiedBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="name" Type="Edm.String"/>
        <Property Name="description" Type="Edm.String"/>
        <Property Name="country" Type="Edm.String"/>
        <Property Name="currency" Type="Edm.String"/>
        <Property Name="stock" Type="Edm.Int32"/>
        <Property Name="price" Type="Edm.Decimal" Precision="12" Scale="2"/>
        <Property Name="date" Type="Edm.DateTime" sap:display-format="Date"/>
        <Property Name="dateTime" Type="Edm.DateTimeOffset"/>
        <Property Name="time" Type="Edm.Time"/>
        <Property Name="timestamp" Type="Edm.DateTimeOffset" Precision="7"/>
      </EntityType>
      <Annotations Target="test.MainService.Header" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.SelectionFields">
          <Collection>
            <PropertyPath>name</PropertyPath>
            <PropertyPath>currency</PropertyPath>
            <PropertyPath>country</PropertyPath>
          </Collection>
        </Annotation>
        <Annotation Term="UI.LineItem">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
              <PropertyValue Property="Label" String="Name"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="price"/>
              <PropertyValue Property="Label" String="Price"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="currency"/>
              <PropertyValue Property="Label" String="Currency"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="stock"/>
              <PropertyValue Property="Label" String="Stock"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="country"/>
              <PropertyValue Property="Label" String="Country"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="date"/>
              <PropertyValue Property="Label" String="Date"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="dateTime"/>
              <PropertyValue Property="Label" String="Date Time"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="time"/>
              <PropertyValue Property="Label" String="Time"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="timestamp"/>
              <PropertyValue Property="Label" String="Timestamp"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.HeaderInfo">
          <Record Type="UI.HeaderInfoType">
            <PropertyValue Property="TypeName" String="Header"/>
            <PropertyValue Property="TypeNamePlural" String="Headers"/>
            <PropertyValue Property="Title">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="name"/>
              </Record>
            </PropertyValue>
            <PropertyValue Property="Description">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="description"/>
              </Record>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.Facets">
          <Collection>
            <Record Type="UI.ReferenceFacet">
              <PropertyValue Property="Label" String="General"/>
              <PropertyValue Property="Target" AnnotationPath="@UI.FieldGroup#General"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.FieldGroup" Qualifier="General">
          <Record Type="UI.FieldGroupType">
            <PropertyValue Property="Data">
              <Collection>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="name"/>
                  <PropertyValue Property="Label" String="Name"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="price"/>
                  <PropertyValue Property="Label" String="Price"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="currency"/>
                  <PropertyValue Property="Label" String="Currency"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="stock"/>
                  <PropertyValue Property="Label" String="Stock"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="country"/>
                  <PropertyValue Property="Label" String="Country"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="date"/>
                  <PropertyValue Property="Label" String="Date"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="dateTime"/>
                  <PropertyValue Property="Label" String="Date Time"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="time"/>
                  <PropertyValue Property="Label" String="Time"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="timestamp"/>
                  <PropertyValue Property="Label" String="Timestamp"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="test.MainService.Header/ID" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="Core.ComputedDefaultValue" Bool="true"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/createdAt" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Angelegt am"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/createdBy" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="Die eindeutige ID eines Benutzers"/>
        <Annotation Term="Common.Label" String="Angelegt von"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/modifiedAt" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Geändert am"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/modifiedBy" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="Die eindeutige ID eines Benutzers"/>
        <Annotation Term="Common.Label" String="Geändert von"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`postgres-main GET $metadata localized 2`] = `
"<?xml version="1.0" encoding="utf-8"?>
<edmx:Edmx Version="1.0" xmlns:edmx="http://schemas.microsoft.com/ado/2007/06/edmx" xmlns:m="http://schemas.microsoft.com/ado/2007/08/dataservices/metadata" xmlns:sap="http://www.sap.com/Protocols/SAPData">
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="Common" Namespace="com.sap.vocabularies.Common.v1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="Core" Namespace="Org.OData.Core.V1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="UI" Namespace="com.sap.vocabularies.UI.v1"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion="2.0">
    <Schema Namespace="test.MainService" xmlns="http://schemas.microsoft.com/ado/2008/09/edm">
      <EntityContainer Name="EntityContainer" m:IsDefaultEntityContainer="true">
        <EntitySet Name="Header" EntityType="test.MainService.Header"/>
      </EntityContainer>
      <EntityType Name="Header">
        <Key>
          <PropertyRef Name="ID"/>
        </Key>
        <Property Name="ID" Type="Edm.Guid" Nullable="false"/>
        <Property Name="createdAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="createdBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="modifiedAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="modifiedBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="name" Type="Edm.String"/>
        <Property Name="description" Type="Edm.String"/>
        <Property Name="country" Type="Edm.String"/>
        <Property Name="currency" Type="Edm.String"/>
        <Property Name="stock" Type="Edm.Int32"/>
        <Property Name="price" Type="Edm.Decimal" Precision="12" Scale="2"/>
        <Property Name="date" Type="Edm.DateTime" sap:display-format="Date"/>
        <Property Name="dateTime" Type="Edm.DateTimeOffset"/>
        <Property Name="time" Type="Edm.Time"/>
        <Property Name="timestamp" Type="Edm.DateTimeOffset" Precision="7"/>
      </EntityType>
      <Annotations Target="test.MainService.Header" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.SelectionFields">
          <Collection>
            <PropertyPath>name</PropertyPath>
            <PropertyPath>currency</PropertyPath>
            <PropertyPath>country</PropertyPath>
          </Collection>
        </Annotation>
        <Annotation Term="UI.LineItem">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
              <PropertyValue Property="Label" String="Name"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="price"/>
              <PropertyValue Property="Label" String="Price"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="currency"/>
              <PropertyValue Property="Label" String="Currency"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="stock"/>
              <PropertyValue Property="Label" String="Stock"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="country"/>
              <PropertyValue Property="Label" String="Country"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="date"/>
              <PropertyValue Property="Label" String="Date"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="dateTime"/>
              <PropertyValue Property="Label" String="Date Time"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="time"/>
              <PropertyValue Property="Label" String="Time"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="timestamp"/>
              <PropertyValue Property="Label" String="Timestamp"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.HeaderInfo">
          <Record Type="UI.HeaderInfoType">
            <PropertyValue Property="TypeName" String="Header"/>
            <PropertyValue Property="TypeNamePlural" String="Headers"/>
            <PropertyValue Property="Title">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="name"/>
              </Record>
            </PropertyValue>
            <PropertyValue Property="Description">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="description"/>
              </Record>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.Facets">
          <Collection>
            <Record Type="UI.ReferenceFacet">
              <PropertyValue Property="Label" String="General"/>
              <PropertyValue Property="Target" AnnotationPath="@UI.FieldGroup#General"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.FieldGroup" Qualifier="General">
          <Record Type="UI.FieldGroupType">
            <PropertyValue Property="Data">
              <Collection>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="name"/>
                  <PropertyValue Property="Label" String="Name"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="price"/>
                  <PropertyValue Property="Label" String="Price"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="currency"/>
                  <PropertyValue Property="Label" String="Currency"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="stock"/>
                  <PropertyValue Property="Label" String="Stock"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="country"/>
                  <PropertyValue Property="Label" String="Country"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="date"/>
                  <PropertyValue Property="Label" String="Date"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="dateTime"/>
                  <PropertyValue Property="Label" String="Date Time"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="time"/>
                  <PropertyValue Property="Label" String="Time"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="timestamp"/>
                  <PropertyValue Property="Label" String="Timestamp"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="test.MainService.Header/ID" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="Core.ComputedDefaultValue" Bool="true"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/createdAt" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Angelegt am"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/createdBy" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="Die eindeutige ID eines Benutzers"/>
        <Annotation Term="Common.Label" String="Angelegt von"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/modifiedAt" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Geändert am"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/modifiedBy" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="Die eindeutige ID eines Benutzers"/>
        <Annotation Term="Common.Label" String="Geändert von"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`postgres-main GET $metadata with query options 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<edmx:Edmx Version="1.0" xmlns:edmx="http://schemas.microsoft.com/ado/2007/06/edmx" xmlns:m="http://schemas.microsoft.com/ado/2007/08/dataservices/metadata" xmlns:sap="http://www.sap.com/Protocols/SAPData">
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/Common.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="Common" Namespace="com.sap.vocabularies.Common.v1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="Core" Namespace="Org.OData.Core.V1"/>
  </edmx:Reference>
  <edmx:Reference Uri="https://sap.github.io/odata-vocabularies/vocabularies/UI.xml" xmlns:edmx="http://docs.oasis-open.org/odata/ns/edmx">
    <edmx:Include Alias="UI" Namespace="com.sap.vocabularies.UI.v1"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion="2.0">
    <Schema Namespace="test.MainService" xmlns="http://schemas.microsoft.com/ado/2008/09/edm">
      <EntityContainer Name="EntityContainer" m:IsDefaultEntityContainer="true">
        <EntitySet Name="Header" EntityType="test.MainService.Header"/>
      </EntityContainer>
      <EntityType Name="Header">
        <Key>
          <PropertyRef Name="ID"/>
        </Key>
        <Property Name="ID" Type="Edm.Guid" Nullable="false"/>
        <Property Name="createdAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="createdBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="modifiedAt" Type="Edm.DateTimeOffset" Precision="7"/>
        <Property Name="modifiedBy" Type="Edm.String" MaxLength="255"/>
        <Property Name="name" Type="Edm.String"/>
        <Property Name="description" Type="Edm.String"/>
        <Property Name="country" Type="Edm.String"/>
        <Property Name="currency" Type="Edm.String"/>
        <Property Name="stock" Type="Edm.Int32"/>
        <Property Name="price" Type="Edm.Decimal" Precision="12" Scale="2"/>
        <Property Name="date" Type="Edm.DateTime" sap:display-format="Date"/>
        <Property Name="dateTime" Type="Edm.DateTimeOffset"/>
        <Property Name="time" Type="Edm.Time"/>
        <Property Name="timestamp" Type="Edm.DateTimeOffset" Precision="7"/>
      </EntityType>
      <Annotations Target="test.MainService.Header" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.Identification">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.SelectionFields">
          <Collection>
            <PropertyPath>name</PropertyPath>
            <PropertyPath>currency</PropertyPath>
            <PropertyPath>country</PropertyPath>
          </Collection>
        </Annotation>
        <Annotation Term="UI.LineItem">
          <Collection>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="name"/>
              <PropertyValue Property="Label" String="Name"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="price"/>
              <PropertyValue Property="Label" String="Price"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="currency"/>
              <PropertyValue Property="Label" String="Currency"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="stock"/>
              <PropertyValue Property="Label" String="Stock"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="country"/>
              <PropertyValue Property="Label" String="Country"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="date"/>
              <PropertyValue Property="Label" String="Date"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="dateTime"/>
              <PropertyValue Property="Label" String="Date Time"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="time"/>
              <PropertyValue Property="Label" String="Time"/>
            </Record>
            <Record Type="UI.DataField">
              <PropertyValue Property="Value" Path="timestamp"/>
              <PropertyValue Property="Label" String="Timestamp"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.HeaderInfo">
          <Record Type="UI.HeaderInfoType">
            <PropertyValue Property="TypeName" String="Header"/>
            <PropertyValue Property="TypeNamePlural" String="Headers"/>
            <PropertyValue Property="Title">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="name"/>
              </Record>
            </PropertyValue>
            <PropertyValue Property="Description">
              <Record Type="UI.DataField">
                <PropertyValue Property="Value" Path="description"/>
              </Record>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term="UI.Facets">
          <Collection>
            <Record Type="UI.ReferenceFacet">
              <PropertyValue Property="Label" String="General"/>
              <PropertyValue Property="Target" AnnotationPath="@UI.FieldGroup#General"/>
            </Record>
          </Collection>
        </Annotation>
        <Annotation Term="UI.FieldGroup" Qualifier="General">
          <Record Type="UI.FieldGroupType">
            <PropertyValue Property="Data">
              <Collection>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="name"/>
                  <PropertyValue Property="Label" String="Name"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="price"/>
                  <PropertyValue Property="Label" String="Price"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="currency"/>
                  <PropertyValue Property="Label" String="Currency"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="stock"/>
                  <PropertyValue Property="Label" String="Stock"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="country"/>
                  <PropertyValue Property="Label" String="Country"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="date"/>
                  <PropertyValue Property="Label" String="Date"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="dateTime"/>
                  <PropertyValue Property="Label" String="Date Time"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="time"/>
                  <PropertyValue Property="Label" String="Time"/>
                </Record>
                <Record Type="UI.DataField">
                  <PropertyValue Property="Value" Path="timestamp"/>
                  <PropertyValue Property="Label" String="Timestamp"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
      </Annotations>
      <Annotations Target="test.MainService.Header/ID" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="Core.ComputedDefaultValue" Bool="true"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/createdAt" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Created On"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/createdBy" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Immutable" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="User's unique ID"/>
        <Annotation Term="Common.Label" String="Created By"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/modifiedAt" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Common.Label" String="Changed On"/>
      </Annotations>
      <Annotations Target="test.MainService.Header/modifiedBy" xmlns="http://docs.oasis-open.org/odata/ns/edm">
        <Annotation Term="UI.HiddenFilter" Bool="true"/>
        <Annotation Term="Core.Computed" Bool="true"/>
        <Annotation Term="Core.Description" String="User's unique ID"/>
        <Annotation Term="Common.Label" String="Changed By"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`postgres-main GET service JSON format 1`] = `
[
  "Header",
]
`;

exports[`postgres-main GET service JSON format 2`] = `
[
  "Header",
]
`;

exports[`postgres-main GET service JSON format 3`] = `
[
  "Header",
]
`;
